syntax = "proto3";
package stride.stakeibc;

message MsgLiquidStake {
  string creator = 1;
  string amount = 2;
  string host_denom = 3;
}

message MsgRedeemStake {
  string creator = 1;
  string amount = 2;
  string host_zone = 3;
  string receiver = 4;
}
